--- a/views/pages/user.html
+++ b/views/pages/user.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="en">
   <!-- Mirrored from demos.creative-tim.com/material-dashboard-pro/examples/pages/user.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 20 Mar 2017 21:33:47 GMT -->
   <head>
@@ -463,7 +464,14 @@
                         <div class="col-md-6">
                           <div class="form-group label-floating">
                             <label class="control-label">角色</label>
-                            <input type="text" class="form-control" />
+                            <select  id="role-dropdownlist" class="form-control" autofocus >
+                              <!-- <option value="volvo">Volvo</option>
+                              <option value="saab">Saab</option>
+                              <option value="mercedes">Mercedes</option>
+                              <option value="audi">Audi</option> -->
+                              
+                            </select>
+                            <!-- <input type="radio" class="form-control" /> -->
                           </div>
                         </div>
                         <!-- <div class="col-md-6">
@@ -758,6 +766,19 @@
   <script src="../../assets/js/material-dashboard.js"></script>
   <!-- Material Dashboard DEMO methods, don't include it in your project! -->
   <script src="../../assets/js/demo.js"></script>
+  <script>
+    $( document ).ready(function(req,res,next) {
+      [{id:'null',name:'請選擇'},{id:'a',name:'a'},{id:'b',name:'b'}].forEach(x => {
+       
 
+        $("#role-dropdownlist").append($("<option/>").val(x.id).text(x.name))
+      })
+  });
+    
+  
+  
+    
+  
+  </script>
   <!-- Mirrored from demos.creative-tim.com/material-dashboard-pro/examples/pages/user.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 20 Mar 2017 21:33:48 GMT -->
 </html>
